src/tests/fixtures/field_values/DuplicateFields.ts.expected
-----------------
INPUT
----------------- 
// @ts-nocheck

/** @GQLType */
export default class Query {
  /** @GQLField */
  hello(): string {
    return "Hello world!";
  }
  /** @GQLField */
  hello(): Array<string> {
    return ["Hello world!"];
  }
}

-----------------
OUTPUT
-----------------
Error: Field "Query.hello" can only be defined once.:
 --> field_values/DuplicateFields.ts:6:3

  |   /** @GQLField */
6 |   hello(): string {
  |   ^ 
  |     return "Hello world!";


Error: :
 --> field_values/DuplicateFields.ts:10:3

   |   /** @GQLField */
10 |   hello(): Array<string> {
   |   ^ 
   |     return ["Hello world!"];
